--- a/src/main/java/components/Menu.form
+++ b/src/main/java/components/Menu.form
@@ -87,6 +87,9 @@
         <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
           <StringArray count="0"/>
         </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="SansSerif" size="18" style="0"/>
+        </Property>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
